Fixed the Stepper so it wouldn't break the project

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -139,3 +139,10 @@ ul {
   text-align: center;
 
 }
+
+.progress-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 50%;
+}
